--- a/all_magazine.html
+++ b/all_magazine.html
@@ -95,6 +95,23 @@
                                     </ol>
                                 </li>
                             </ol>
+                            <ol class="magazineAisdeMenu ph">
+                                <li>
+                                    <a href="all_magazine.html">全部年份</a>
+                                </li>
+                                <li>
+                                    <a href="all_magazine 2020.html">2020年</a>
+                                </li>
+                                <li>
+                                    <a href="all_magazine 2019.html">2019年</a>
+                                </li>
+                                <li>
+                                    <a href="story_southArea.html">2018年</a>
+                                </li>
+                                <li>
+                                    <a href="story_eastArea.html">2017年</a>
+                                </li>
+                            </ol>
                             <div class="allMagazine">
                                 <ol class="allMagazineList">
                                     <h2>All Magazine List</h2>
