--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
             <div class="footerContent">
                 <ul class="footerInfo">
                     <li>
-                        <a href="index.html"><img a src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/01-PC/07-footer/fotterLogo.png?raw=true"
+                        <a href="index.html"><img a src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/a07191d9b3a2cc936c278e6e0ede9d4ce911b418/material/02-PAD/07-footer/footer_logo.svg"
                             alt=""></a>
                     </li>
                     <li>
