--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                             <a class="closeMenu" href="#aboutId"><span>關於大誌</span></a>
                         </li>
                         <li>
-                            <a class="closeMenu" href="#supportId"><span>訂閱支持</span></a>
+                            <a class="closeMenu" href="#supportId"><span>支持訂閱</span></a>
                         </li>
                         <li>
                             <a class="closeMenu" href="#salePointsId"><span>販售場所</span></a>
@@ -502,7 +502,7 @@
                             <a href="#aboutId"><span>關於大誌</span></a>
                         </li>
                         <li>
-                            <a href="#supportId"><span>訂閱支持</span></a>
+                            <a href="#supportId"><span>支持訂閱</span></a>
                         </li>
                         <li>
                             <a href="#salePointsId"><span>販售場所</span></a>
