--- a/story_ KaohsiungCity.html
+++ b/story_ KaohsiungCity.html
@@ -134,19 +134,19 @@ D
                     <h2>Aside Navigation</h2>
                     <ul class="asideNavBarList">
                         <li>
-                           <a href="#issueId"><span>各期雜誌</span></a>
+                           <a href="index.html#issueId"><span>各期雜誌</span></a>
                         </li>
                         <li>
-                            <a href="#salesId"><span>銷售群像</span></a>
+                            <a href="index.html#salesId"><span>銷售群像</span></a>
                         </li>
                         <li>
-                            <a href="#aboutId"><span>關於大誌</span></a>
+                            <a href="index.html#aboutId"><span>關於大誌</span></a>
                         </li>
                         <li>
-                            <a href="#supportId"><span>訂閱支持</span></a>
+                            <a href="index.html#supportId"><span>支持訂閱</span></a>
                         </li>
                         <li>
-                            <a href="#salePointsId"><span>販售場所</span></a>
+                            <a href="index.html#salePointsId"><span>販售場所</span></a>
                         </li>
                         <li>
                             <a href="#"><span>回到頂端</span></a>
