--- a/story_YunlinYunTech.html
+++ b/story_YunlinYunTech.html
@@ -134,29 +134,32 @@
         </div>
 
         <div class="asideBar">
-            <div class="asideLogo">
-                <a href="index.html"><img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/logo/Nav_logo-01.png?raw=true" alt="Aside Big Issue Logo"></a>
-            </div>
-            <nav>
-                <h2>Aside Navigation</h2>
-                <ul class="asideNavBarList">
-                    <li>
-                        <a href="index.html#issueId">各期雜誌</a>
-                    </li>
-                    <li>
-                        <a href="index.html#salesId">銷售群像</a>
-                    </li>
-                    <li>
-                        <a href="index.html#aboutId">關於大誌</a>
-                    </li>
-                    <li>
-                        <a href="#">訂閱支持</a>
-                    </li>
-                    <li>
-                        <a href="#">販售場所</a>
-                    </li>
-                </ul>
-            </nav>
+                <div class="asideLogo">
+                    <a href="index.html"><img src="material/logo/Nav_logo-01.png" alt="Aside Big Issue Logo"></a>
+                </div>
+                <nav>
+                    <h2>Aside Navigation</h2>
+                    <ul class="asideNavBarList">
+                        <li>
+                           <a href="index.html#issueId"><span>各期雜誌</span></a>
+                        </li>
+                        <li>
+                            <a href="index.html#salesId"><span>銷售群像</span></a>
+                        </li>
+                        <li>
+                            <a href="index.html#aboutId"><span>關於大誌</span></a>
+                        </li>
+                        <li>
+                            <a href="index.html#supportId"><span>支持訂閱</span></a>
+                        </li>
+                        <li>
+                            <a href="index.html#salePointsId"><span>販售場所</span></a>
+                        </li>
+                        <li>
+                            <a href="#"><span>回到頂端</span></a>
+                        </li>
+                    </ul>
+                </nav>
         </div>
     </div>
     <footer class="footer">
