--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 <!-- ------------------------------------------------------------------------------------------- -->
 
                 <section class="section sales" id="salesId">
-                    <h2>銷售員群像</h2>
+                    <h2>銷售群像</h2>
                     <div class="salesContent">
                         <div class="asideCommon">
                             <img src="material/01-PC/02-sales/s2SideTitle.svg">
@@ -479,30 +479,7 @@
                                     </ol>
                                 </div>
                             </div>
-                            <!-- <div class="fixedPointsPhone">
-                                <div class="fixedPointsPhoneBtnGroup">
-                                    <button class="moreBtn btnNorth"  class=" active">分頁1</button>
-                                    <button class="moreBtn btnCenter" >分頁2</button>
-                                    <button class="moreBtn btnSouth" >分頁3</button>
-                                    <button class="moreBtn btnEast" >分頁4</button>
-                                </div>
-                                
-                                <div class="fixedPointsPhoneContentGroup">
-                                    <div class="tab-content contentNorth active">
-                                        <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/f5a6ccaefcabf928eafdcc3600383a11c68f9175/material/03-PHONE/06-place/north-place.svg" alt="">
-                                    </div>
-                                    <div class="tab-content contentCenter">
-                                        <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/f5a6ccaefcabf928eafdcc3600383a11c68f9175/material/03-PHONE/06-place/mediate-place.svg" alt="">
-                                    </div>
-                                    <div class="tab-content contentSouth">
-                                        <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/f5a6ccaefcabf928eafdcc3600383a11c68f9175/material/03-PHONE/06-place/south-place.svg" alt="">
-                                    </div>
-                                    <div class="tab-content contentEast">
-                                        <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/f5a6ccaefcabf928eafdcc3600383a11c68f9175/material/03-PHONE/06-place/east-place.svg" alt="">
-                                    </div>
-                                </div>
-                            
-                            </div> -->
+                        </div>
                 </section>
             </div>
 
@@ -544,8 +521,9 @@
             <div class="footerContent">
                 <ul class="footerInfo">
                     <li>
-                        <a href="index.html"><img a src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/a07191d9b3a2cc936c278e6e0ede9d4ce911b418/material/02-PAD/07-footer/footer_logo.svg"
-                            alt=""></a>
+                        <div class="fooerLogo">
+                            <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/01-PC/07-footer/fotterLogo.png?raw=true" alt="">
+                        </div>
                     </li>
                     <li>
                         <ul class="footerSocial">
