--- a/all_magazine 2020.html
+++ b/all_magazine 2020.html
@@ -50,10 +50,10 @@
                                     <a href="all_magazine 2019.html">2019年</a>
                                 </li>
                                 <li>
-                                    <a href="story_southArea.html">2018年</a>
+                                    <a href="#">2018年</a>
                                 </li>
                                 <li>
-                                    <a href="story_eastArea.html">2017年</a>
+                                    <a href="#">2017年</a>
                                 </li>
                             </ol>
                                 
