--- a/all_magazine.html
+++ b/all_magazine.html
@@ -95,7 +95,7 @@
                                     </ol>
                                 </li>
                             </ol>
-                            <ol class="mobileSelectYears">
+                            <!-- <ol class="mobileSelectYears">
                                 <li>
                                     <a href="all_magazine.html">全部年份</a>
                                 </li>
@@ -111,7 +111,7 @@
                                 <li>
                                     <a href="story_eastArea.html">2017年</a>
                                 </li>
-                            </ol>
+                            </ol> -->
                             <div class="allMagazine">
                                 <ol class="allMagazineList">
                                     <h2>All Magazine List</h2>
@@ -125,7 +125,7 @@
                                     </li>
                                     <li>
                                         <div class="magazinePic">
-                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2020_06-2.png" alt="">
+                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2020_06_A.jpeg" alt="">
                                         </div>
                                         <button class="moreBtn">
                                             <a href="#">2020年6月</a>
@@ -305,7 +305,7 @@
                             <a href="index.html#salePointsId"><span>販售場所</span></a>
                         </li>
                         <li>
-                            <a href="index.html#issueId"><span>回到頂端</span></a>
+                            <a href="all_magazine.html"><span>回到頂端</span></a>
                         </li>
                     </ul>
                 </nav>
