--- a/story_eastArea.html
+++ b/story_eastArea.html
@@ -178,22 +178,22 @@
                     <h2>Aside Navigation</h2>
                     <ul class="asideNavBarList">
                         <li>
-                           <a href="#issueId"><span>各期雜誌</span></a>
+                           <a href="index.html#issueId"><span>各期雜誌</span></a>
                         </li>
                         <li>
-                            <a href="#salesId"><span>銷售群像</span></a>
+                            <a href="index.html#salesId"><span>銷售群像</span></a>
                         </li>
                         <li>
-                            <a href="#aboutId"><span>關於大誌</span></a>
+                            <a href="index.html#aboutId"><span>關於大誌</span></a>
                         </li>
                         <li>
-                            <a href="#supportId"><span>訂閱支持</span></a>
+                            <a href="index.html#supportId"><span>支持訂閱</span></a>
                         </li>
                         <li>
-                            <a href="#salePointsId"><span>販售場所</span></a>
+                            <a href="index.html#salePointsId"><span>販售場所</span></a>
                         </li>
                         <li>
-                            <a href="#"><span>回到頂端</span></a>
+                            <a href="story_eastArea.html"><span>回到頂端</span></a>
                         </li>
                     </ul>
                 </nav>
@@ -205,7 +205,8 @@
                 <ul class="footerInfo">
                     <li>
                         <div class="fooerLogo">
-                            <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/01-PC/07-footer/fotterLogo.png?raw=true" alt="">
+                            <a href="index.html"><img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/01-PC/07-footer/fotterLogo.png?raw=true" alt=""></a>
+                            
                         </div>
                     </li>
                     <li>
