--- a/story_northArea.html
+++ b/story_northArea.html
@@ -202,22 +202,22 @@
                     <h2>Aside Navigation</h2>
                     <ul class="asideNavBarList">
                         <li>
-                           <a href="#issueId"><span>各期雜誌</span></a>
+                           <a href="index.html#issueId"><span>各期雜誌</span></a>
                         </li>
                         <li>
-                            <a href="#salesId"><span>銷售群像</span></a>
+                            <a href="index.html#salesId"><span>銷售群像</span></a>
                         </li>
                         <li>
-                            <a href="#aboutId"><span>關於大誌</span></a>
+                            <a href="index.html#aboutId"><span>關於大誌</span></a>
                         </li>
                         <li>
-                            <a href="#supportId"><span>訂閱支持</span></a>
+                            <a href="index.html#supportId"><span>支持訂閱</span></a>
                         </li>
                         <li>
-                            <a href="#salePointsId"><span>販售場所</span></a>
+                            <a href="index.html#salePointsId"><span>販售場所</span></a>
                         </li>
                         <li>
-                            <a href="#"><span>回到頂端</span></a>
+                            <a href="story_northArea.html"><span>回到頂端</span></a>
                         </li>
                     </ul>
                 </nav>
@@ -229,23 +229,23 @@
                 <ul class="footerInfo">
                     <li>
                         <div class="fooerLogo">
-                            <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/01-PC/07-footer/fotterLogo.png?raw=true" alt="">
+                            <a href="index.html"><img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/01-PC/07-footer/fotterLogo.png?raw=true" alt=""></a>
                         </div>
                     </li>
                     <li>
                         <ul class="footerSocial">
                             <li>
-                                <a href="#">
+                                <a href="https://zh-tw.facebook.com/bigissue.tw">
                                     <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/aa5682bc9e55b6bacee82e516c90a2724e25e310/material/01-PC/07-footer/icon_fb.svg" alt="">
                                 </a>
                             </li>
                             <li>
-                                <a href="#">
+                                <a href="https://www.instagram.com/bigissue.tw/">
                                     <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/aa5682bc9e55b6bacee82e516c90a2724e25e310/material/01-PC/07-footer/icon_ig.svg" alt="">
                                 </a>
                             </li>
                             <li>
-                                <a href="#">
+                                <a href="mailto:service@bigissue.tw">
                                     <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/aa5682bc9e55b6bacee82e516c90a2724e25e310/material/01-PC/07-footer/icon_email.svg" alt="">
                                 </a>
                             </li>
