--- a/index.html
+++ b/index.html
@@ -379,17 +379,17 @@
                             <ol class="supportList">
                                 <h2>Subscription List</h2>
                                 <li>
-                                    <a href="#">
+                                    <a href="https://docs.google.com/forms/d/e/1FAIpQLScLhUIVvMp2sS8o_OknFUCrglvROvbQ5PiH1okvh6-0ojbRqg/viewform">
                                         <img src="material/01-PC/05-support/support_A.svg" alt="">
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#">
+                                    <a href="https://docs.google.com/forms/d/e/1FAIpQLScLhUIVvMp2sS8o_OknFUCrglvROvbQ5PiH1okvh6-0ojbRqg/viewform">
                                         <img src="material/01-PC/05-support/support_B.svg">
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#">
+                                    <a href="https://docs.google.com/forms/d/e/1FAIpQLScLhUIVvMp2sS8o_OknFUCrglvROvbQ5PiH1okvh6-0ojbRqg/viewform">
                                         <img src="material/01-PC/05-support/support_C.svg" alt="">
                                     </a>
                                 </li>
@@ -397,7 +397,7 @@
                         </div>
                     </div>
                     <button class="moreBtn">
-                        <a href="#">我要訂閱</a>
+                        <a href="https://docs.google.com/forms/d/e/1FAIpQLScLhUIVvMp2sS8o_OknFUCrglvROvbQ5PiH1okvh6-0ojbRqg/viewform">我要訂閱</a>
                     </button>
                 </section>
 
