--- a/story_TaicungYunTech.html
+++ b/story_TaicungYunTech.html
@@ -141,20 +141,23 @@
                 <h2>Aside Navigation</h2>
                 <ul class="asideNavBarList">
                     <li>
-                        <a href="index.html#issueId">各期雜誌</a>
-                    </li>
-                    <li>
-                        <a href="index.html#salesId">銷售群像</a>
-                    </li>
-                    <li>
-                        <a href="index.html#aboutId">關於大誌</a>
-                    </li>
-                    <li>
-                        <a href="#">訂閱支持</a>
-                    </li>
-                    <li>
-                        <a href="#">販售場所</a>
-                    </li>
+                        <a href="index.html#issueId"><span>各期雜誌</span></a>
+                     </li>
+                     <li>
+                         <a href="index.html#salesId"><span>銷售群像</span></a>
+                     </li>
+                     <li>
+                         <a href="index.html#aboutId"><span>關於大誌</span></a>
+                     </li>
+                     <li>
+                         <a href="index.html#supportId"><span>支持訂閱</span></a>
+                     </li>
+                     <li>
+                         <a href="index.html#salePointsId"><span>販售場所</span></a>
+                     </li>
+                     <li>
+                         <a href="story_TaicungYunTech.html"><span>回到頂端</span></a>
+                     </li>
                 </ul>
             </nav>
         </div>
@@ -165,28 +168,26 @@
                 <ul class="footerInfo">
                     <li>
                         <div class="fooerLogo">
-                            <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/01-PC/07-footer/fotterLogo.png?raw=true"
-                                alt="">
+                            <a href="index.html"><img a src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/01-PC/07-footer/fotterLogo.png?raw=true"
+                                alt=""></a>
+                            
                         </div>
                     </li>
                     <li>
                         <ul class="footerSocial">
                             <li>
-                                <a href="#">
-                                    <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/aa5682bc9e55b6bacee82e516c90a2724e25e310/material/01-PC/07-footer/icon_fb.svg"
-                                        alt="">
+                                <a href="https://zh-tw.facebook.com/bigissue.tw">
+                                    <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/aa5682bc9e55b6bacee82e516c90a2724e25e310/material/01-PC/07-footer/icon_fb.svg" alt="">
                                 </a>
                             </li>
                             <li>
-                                <a href="#">
-                                    <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/aa5682bc9e55b6bacee82e516c90a2724e25e310/material/01-PC/07-footer/icon_ig.svg"
-                                        alt="">
+                                <a href="https://www.instagram.com/bigissue.tw/">
+                                    <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/aa5682bc9e55b6bacee82e516c90a2724e25e310/material/01-PC/07-footer/icon_ig.svg" alt="">
                                 </a>
                             </li>
                             <li>
-                                <a href="#">
-                                    <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/aa5682bc9e55b6bacee82e516c90a2724e25e310/material/01-PC/07-footer/icon_email.svg"
-                                        alt="">
+                                <a href="mailto:service@bigissue.tw">
+                                    <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/aa5682bc9e55b6bacee82e516c90a2724e25e310/material/01-PC/07-footer/icon_email.svg" alt="">
                                 </a>
                             </li>
                         </ul>
