--- a/story_TainanNCKU.html
+++ b/story_TainanNCKU.html
@@ -147,23 +147,23 @@ D
                     <h2>Aside Navigation</h2>
                     <ul class="asideNavBarList">
                         <li>
-                           <a href="#issueId"><span>各期雜誌</span></a>
-                        </li>
-                        <li>
-                            <a href="#salesId"><span>銷售群像</span></a>
-                        </li>
-                        <li>
-                            <a href="#aboutId"><span>關於大誌</span></a>
-                        </li>
-                        <li>
-                            <a href="#supportId"><span>訂閱支持</span></a>
-                        </li>
-                        <li>
-                            <a href="#salePointsId"><span>販售場所</span></a>
-                        </li>
-                        <li>
-                            <a href="#"><span>回到頂端</span></a>
-                        </li>
+                            <a href="index.html#issueId"><span>各期雜誌</span></a>
+                         </li>
+                         <li>
+                             <a href="index.html#salesId"><span>銷售群像</span></a>
+                         </li>
+                         <li>
+                             <a href="index.html#aboutId"><span>關於大誌</span></a>
+                         </li>
+                         <li>
+                             <a href="index.html#supportId"><span>支持訂閱</span></a>
+                         </li>
+                         <li>
+                             <a href="index.html#salePointsId"><span>販售場所</span></a>
+                         </li>
+                         <li>
+                             <a href="story_TainanNCKU.html"><span>回到頂端</span></a>
+                         </li>
                     </ul>
                 </nav>
         </div>
@@ -174,8 +174,8 @@ D
                 <ul class="footerInfo">
                     <li>
                         <div class="fooerLogo">
-                            <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/01-PC/07-footer/fotterLogo.png?raw=true"
-                                alt="">
+                            <a href="index.html"><img a src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/01-PC/07-footer/fotterLogo.png?raw=true"
+                                alt=""></a>
                         </div>
                     </li>
                     <li>
