--- a/story_YunlinYunTech.html
+++ b/story_YunlinYunTech.html
@@ -141,20 +141,23 @@
                 <h2>Aside Navigation</h2>
                 <ul class="asideNavBarList">
                     <li>
-                        <a href="index.html#issueId">各期雜誌</a>
-                    </li>
-                    <li>
-                        <a href="index.html#salesId">銷售群像</a>
-                    </li>
-                    <li>
-                        <a href="index.html#aboutId">關於大誌</a>
-                    </li>
-                    <li>
-                        <a href="#">訂閱支持</a>
-                    </li>
-                    <li>
-                        <a href="#">販售場所</a>
-                    </li>
+                        <a href="index.html#issueId"><span>各期雜誌</span></a>
+                     </li>
+                     <li>
+                         <a href="index.html#salesId"><span>銷售群像</span></a>
+                     </li>
+                     <li>
+                         <a href="index.html#aboutId"><span>關於大誌</span></a>
+                     </li>
+                     <li>
+                         <a href="index.html#supportId"><span>支持訂閱</span></a>
+                     </li>
+                     <li>
+                         <a href="index.html#salePointsId"><span>販售場所</span></a>
+                     </li>
+                     <li>
+                         <a href="story_YunlinYunTech.html"><span>回到頂端</span></a>
+                     </li>
                 </ul>
             </nav>
         </div>
@@ -165,8 +168,7 @@
                 <ul class="footerInfo">
                     <li>
                         <div class="fooerLogo">
-                            <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/01-PC/07-footer/fotterLogo.png?raw=true"
-                                alt="">
+                            <a href="index.html"><img src="material/logo/Nav_logo-01.png" alt="Aside Big Issue Logo"></a>
                         </div>
                     </li>
                     <li>
