--- a/all_magazine.html
+++ b/all_magazine.html
@@ -61,7 +61,7 @@
                         <div class="magazineContent">
                             <ol class="magazineBreadCrumb">
                                 <li>
-                                    <a href="index.html"><span>HOME</span></a>
+                                    <a href="index.html#issueId"><span>HOME</span></a>
                                 </li>
                                 <li>
                                     <i class="fas fa-caret-right"></i>
@@ -117,7 +117,7 @@
                                     <h2>All Magazine List</h2>
                                     <li>
                                         <div class="magazinePic">
-                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2020_07.png" alt="">
+                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2020_07.jpg" alt="">
                                         </div>
                                         <button class="moreBtn">
                                             <a href="#">2020年7月</a>
