--- a/index.html
+++ b/index.html
@@ -112,6 +112,15 @@
                         </div>
                         <div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
                             <div class="carousel-inner">
+                                <!-- <div class="carousel-item active" data-interval="4000">
+                                    <img class="showLightBox" src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2020_07.jpg" class="d-block w-100" alt="...">
+                                    <div class="pcCarousel animate__animated animate__fadeInUp">
+                                        <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/8ac7ff3acd67cc95fdcc5b12252c3e2ed0d7a681/material/magazine/section_01_Magzine_main_txt_PC-7.svg">
+                                    </div>
+                                    <div class="mobileCarousel animate__animated animate__fadeInUp">
+                                        <img src="material/magazine/section_01_Magzine_main_txt_PAD-6.svg" alt="">
+                                    </div>
+                                </div> -->
                                 <div class="carousel-item active" data-interval="4000">
                                     <img class="showLightBox" src="material/magazine/Mag_2020_06_A.jpeg" class="d-block w-100" alt="...">
                                     <div class="pcCarousel animate__animated animate__fadeInUp">
