--- a/all_magazine.html
+++ b/all_magazine.html
@@ -32,7 +32,8 @@
             <header class="header">
                 <h1>All Magazine</h1>
                 <div class="headerPic">
-                    <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/2de0de9ad50cfd53ef72f61f55172e294d67382a/material/magazine/NewPage_Magazine-title-PC%202.svg" alt="Header Picture">
+                    <a href="all_magazine.html"><img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/2de0de9ad50cfd53ef72f61f55172e294d67382a/material/magazine/NewPage_Magazine-title-PC%202.svg" alt="Header Picture"></a>
+                    
                 </div>
             </header>
             <main>
