--- a/all_magazine.html
+++ b/all_magazine.html
@@ -118,7 +118,7 @@
                                     <h2>All Magazine List</h2>
                                     <li>
                                         <div class="magazinePic">
-                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2020_07.jpg" alt="">
+                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2020_07.png" alt="">
                                         </div>
                                         <button class="moreBtn">
                                             <a href="#">2020年7月</a>
@@ -126,7 +126,7 @@
                                     </li>
                                     <li>
                                         <div class="magazinePic">
-                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2020_06_A.jpeg" alt="">
+                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2020_06_A.png" alt="">
                                         </div>
                                         <button class="moreBtn">
                                             <a href="#">2020年6月</a>
@@ -134,7 +134,7 @@
                                     </li>
                                     <li>
                                         <div class="magazinePic">
-                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2020_05.jpeg" alt="">
+                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2020_05.png" alt="">
                                         </div>
                                         <button class="moreBtn">
                                             <a href="#">2020年5月</a>
@@ -145,7 +145,7 @@
                                     <h2>All Magazine List</h2>
                                     <li>
                                         <div class="magazinePic">
-                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2020_04.jpeg" alt="">
+                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2020_04.png" alt="">
                                         </div>
                                         <button class="moreBtn">
                                             <a href="#">2020年4月</a>
@@ -153,7 +153,7 @@
                                     </li>
                                     <li>
                                         <div class="magazinePic">
-                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2020_03.jpeg" alt="">
+                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2020_03.png" alt="">
                                         </div>
                                         <button class="moreBtn">
                                             <a href="#">2020年3月</a>
