--- a/all_magazine 2019.html
+++ b/all_magazine 2019.html
@@ -115,7 +115,7 @@
                                     </li>
                                     <li>
                                         <div class="magazinePic">
-                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2019_11.png" alt="">
+                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2019_11cut.png" alt="">
                                         </div>
                                         <button class="moreBtn">
                                             <a href="#">2019年11月</a>
@@ -149,14 +149,14 @@
                                         </button>
                                     <li>
                                         <div class="magazinePic">
-                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2019_07.png" alt="">
+                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2019_07cut.png" alt="">
                                         </div>
                                         <button class="moreBtn">
                                             <a href="#">2019年7月</a>
                                         </button>
                                     </li>
                                 </ol>
-                                <ol class="allMagazineList">
+                                <!-- <ol class="allMagazineList">
                                     <h2>All Magazine List</h2>
                                     <li>
                                         <div class="magazinePic">
@@ -168,7 +168,7 @@
                                     </li>
                                     <li>
                                         <div class="magazinePic">
-                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2019_07.png" alt="">
+                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2019_07cut.png" alt="">
                                         </div>
                                         <button class="moreBtn">
                                             <a href="#">2019年5月</a>
@@ -209,7 +209,7 @@
                                             <a href="#">2019年1月</a>
                                         </button>
                                     </li>
-                                </ol>
+                                </ol> -->
                             </div>
                         </div>
                     </div>
